...
    "Add Bookmark" : {

    },
    "Add bookmarks for quick access to your favorite commands" : {

    },
    "Add Server" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Server"
...
    "Avg" : {

    },
    "Avg: %lld%%" : {

    },
    "Back" : {

    },
    "baobaoyang" : {

    },
    "Basic Info" : {
...
    "Created" : {

    },
    "Dark (Recommended)" : {

    },
    "Dashboard" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dashboard"
...
    "Data Management" : {

    },
    "Database Size" : {

    },
    "Delete" : {

    },
    "Delete Folder?" : {

    },
    "Delete Server" : {
...
    "Description" : {

    },
    "Description (optional)" : {

    },
    "Disconnect" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disconnect"
...
            "state" : "translated",
            "value" : "断开连接"
          }
        }
      }
    },
    "Done" : {

    },
    "Duration: %@" : {

    },
    "Edit" : {
...
    "Log Level Statistics" : {

    },
    "Log Storage" : {

    },
    "Logs" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logs"
...
    "Min: %lld%%" : {

    },
    "Move" : {

    },
    "Move Server" : {

    },
    "Name" : {

    },
    "New Bookmark" : {
...
    "New Folder" : {

    },
    "New Group" : {

    },
    "New Server" : {

    },
    "No Active Session" : {

    },
    "No Activity Logs" : {

    },
    "No Bookmarks" : {
...
        }
      }
    },
    "No Servers in %@" : {

    },
    "No Servers Yet" : {

    },
    "None" : {

    },
    "Notes" : {
...
    "Root" : {

    },
    "Root Servers" : {

    },
    "Save" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
...
            "state" : "translated",
            "value" : "保存"
          }
        }
      }
    },
    "Save Server?" : {

    },
    "Search bookmarks..." : {

    },
    "Search logs..." : {
...
            "state" : "translated",
            "value" : "服务器"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
...
            "state" : "translated",
            "value" : "终端"
          }
        }
      }
    },
    "Terminal Font Size" : {

    },
    "Terminal Type" : {

    },
    "Test Connection" : {
...
